--- a/index.html
+++ b/index.html
@@ -14,12 +14,10 @@
     <script src="https://kit.fontawesome.com/6b896963d9.js" crossorigin="anonymous"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <!-- should be responsive
+    <!-- 
 how to call labraiy in JS 
 .json
-axios     axios-http.com
-
-
+axios
     -->
 </head>
 
@@ -31,6 +29,7 @@ axios     axios-http.com
 
         <form onsubmit="myFunction(); return false" class="formm">
             <input type="text" id="city" placeholder="Enter your city name">
+            <!-- <input type="text" id="autocomplete"> -->
             <!-- <button type="submit">Get Weather</button> -->
         </form>
         <div class="main_container">
@@ -112,6 +111,8 @@ axios     axios-http.com
         </ul>
     </footer>
     <script src="./script.js"></script>
+    <!-- <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD95UmIs7F-rZFEkF2ErNAmyaphBz3KZBo&libraries=places&callback=initAutocomplete" defer></script> -->
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js" defer></script> -->
 </body>
 
 </html>
