--- a/index.html
+++ b/index.html
@@ -9,16 +9,13 @@
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="./mobileStyle.css" media="(max-device-width:450px)">
 
-    <link rel="shortcut icon" type="image/x-icon" href="./cloud.png" />
-
+    <link rel="shortcut icon" type="image/x-icon" href="./img/cloud.png" />
+    <!-- Icons CDN link -->
     <script src="https://kit.fontawesome.com/6b896963d9.js" crossorigin="anonymous"></script>
-
+    <!-- API Calling -->
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <!-- 
-how to call labraiy in JS 
-.json
-axios
-    -->
+    <!-- My MAIN JavaScript -->
+    <script defer src="./script.js"></script>
 </head>
 
 <body>
@@ -27,9 +24,8 @@ axios
     </nav>
     <div class="body_padding_div">
 
-        <form onsubmit="myFunction(); return false" class="formm">
+        <form onsubmit="getWeather(event)" class="formm">
             <input type="text" id="city" placeholder="Enter your city name">
-            <!-- <input type="text" id="autocomplete"> -->
             <!-- <button type="submit">Get Weather</button> -->
         </form>
         <div class="main_container">
@@ -38,25 +34,23 @@ axios
             </div>
             <div id="tempC"></div>
         </div>
-        <div class="flex">
-            <div id="city_name"></div>
-            <div id="weather_condition"></div>
-        </div>
+        <div class="flex" id="parentDiv2"></div>
 
-        <div class="details">
+        <div id="details">
 
-            <div class="left">
+            <!-- 
+            <div id="left">
                 <div id="tempF"></div><br>
                 <div id="feels_like"></div><br>
                 <div id="humidity"></div><br>
             </div>
-            <div class="right">
+            <div id="right">
                 <div id="cloud"></div>
                 <div id="temp_f"></div>
                 <div id="wind"></div>
                 <div id="visibility"></div><br>
                 <div id="wind_speed"></div>
-            </div>
+            </div> -->
         </div>
     </div>
 
@@ -110,9 +104,12 @@ axios
 
         </ul>
     </footer>
-    <script src="./script.js"></script>
     <!-- <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD95UmIs7F-rZFEkF2ErNAmyaphBz3KZBo&libraries=places&callback=initAutocomplete" defer></script> -->
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js" defer></script> -->
+
+    <!-- how to call labraiy in JS 
+.json
+axios -->
 </body>
 
 </html>
