--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <link rel="shortcut icon" type="image/x-icon" href="./img/cloud.png" />
     <!-- Icons CDN link -->
-    <script src="https://kit.fontawesome.com/6b896963d9.js" crossorigin="anonymous"></script>
+    <script defer src="https://kit.fontawesome.com/6b896963d9.js" crossorigin="anonymous"></script>
     <!-- API Calling -->
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <!-- My MAIN JavaScript -->
@@ -30,12 +30,14 @@
             <input type="text" id="city" placeholder="Enter your city name">
             <!-- <button type="submit">Get Weather</button> -->
         </form>
-        <div class="main_container">
-            <div>
+        <div id="main_container">
+            <!-- <div>
                 <img src="" alt="" id="weather_icon">
-            </div>
+            </div> -->
             <div id="tempC"></div>
         </div>
+
+
         <div class="flex" id="parentDiv2"></div>
 
         <div id="details">
@@ -54,6 +56,24 @@
                 <div id="wind_speed"></div>
             </div> -->
         </div>
+
+
+        <div id="forecast">
+
+        </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
     </div>
 
 
