--- a/index.html
+++ b/index.html
@@ -59,7 +59,16 @@
 
 
         <div id="forecast">
-
+            <details>
+                <summary>Epcot Center</summary>
+                <p>Epcot is a theme park at Walt Disney World Resort featuring exciting attractions, international
+                    pavilions, award-winning fireworks and seasonal special events.</p>
+            </details>
+            <details>
+                <summary>Epcot Center</summary>
+                <p>Epcot is a theme park at Walt Disney World Resort featuring exciting attractions, international
+                    pavilions, award-winning fireworks and seasonal special events.</p>
+            </details>
         </div>
 
 
