--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </div>
 
 
-        <div id="forecastDiv" border="2px">
+        <div id="forecastDiv">
                 <!-- <canvas id="myChart"></canvas> -->
 
 
