--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <!-- <a href="./tem/index.html">anchor</a> -->
 
 
-     <footer>
+     <!-- <footer> -->
         <p>Developed by Shehzad</p>
         <ul class="iconscontainer">
             <li><a href="mailto:shehzaddiqbal@outlook.com" target="_blank"> <i><svg class="icon"
