--- a/tem/date.html
+++ b/tem/date.html
@@ -8,7 +8,10 @@
 </head>
 <body>
 	<script>
-		
+		let a = function() {
+			console.log('saad khan');
+		}
+		console.log(a);
 	</script>
 </body>
 </html>
